# nxp_matter_support

./: LICENSE.txt  README.md  SW-Content-Register.txt
cmake/: Kconfig  Kconfig.defconfig  Kconfig.sdk.common  build_helpers.cmake  mcxw72_sdk  nxp_sdk_gn_build.cmake  nxp_sdk_reconfig.cmake  sdk_hook.cmake
cmake/mcxw71_k32w1/: Kconfig.defconfig
cmake/mcxw7x_sdk/: Kconfig.defconfig
cmake/rt/: Kconfig.defconfig  nxp_sdk_reconfig.cmake
cmake/rt/rt1060/: Kconfig.defconfig  bootloader.conf
cmake/rt/rt1170/: Kconfig.defconfig  bootloader.conf  nxp_sdk_reconfig.cmake
cmake/rt/rw61x/: Kconfig.defconfig  bootloader.conf  nxp_sdk_reconfig.cmake
examples/platform/common/ble/: ble_function_mux.c  ble_function_mux.h  gatt_db.h  gatt_uuid128.h
examples/platform/common/low_power/: freertos_lp_hooks.c
examples/platform/k32w0/: BUILD.gn  args.gni
examples/platform/k32w0/app/: BUILD.gn  args.gni
examples/platform/k32w0/app/ldscripts/: chip-k32w0x-linker.ld
examples/platform/k32w0/app/project_include/: OpenThreadConfig.h
examples/platform/k32w0/app/support/: BUILD.gn  FreeRtosHooks.c  FreeRtosHooks.h  Memconfig.cpp
examples/platform/k32w0/common/: CustomFactoryDataProvider.cpp  CustomFactoryDataProvider.h
examples/platform/k32w0/scripts/: detokenizer.py  sign-outdir.py
examples/platform/k32w0/ssbl/: BUILD.gn
examples/platform/k32w0/ssbl/stubs/: eabi_stub.c
examples/platform/k32w0/util/: DefaultTestEventTriggerDelegate.cpp  LEDWidget.cpp
examples/platform/k32w0/util/include/: DefaultTestEventTriggerDelegate.h  LEDWidget.h
examples/platform/mcxw71/: nxp_sdk_reconfig.cmake
examples/platform/mcxw71/app/project_include/freeRTOS/: FreeRTOSConfig.h
examples/platform/mcxw71_k32w1/: nxp_sdk_reconfig.cmake
examples/platform/mcxw72/: nxp_sdk_reconfig.cmake
examples/platform/mcxw72/app/: startup.S
examples/platform/mcxw72/app/project_include/openthread/: OpenThreadConfig.h
examples/platform/rt/: nxp_sdk_reconfig.cmake
examples/platform/rt/rt1060/: nxp_sdk_reconfig.cmake
examples/platform/rt/rt1060/app/ldscripts/: MIMXRT1062xxxxx_flexspi_nor.ld
examples/platform/rt/rt1060/app/project_include/freeRTOS/: FreeRTOSConfig.h
examples/platform/rt/rt1060/app/project_include/openthread/: OpenThreadConfig.h
examples/platform/rt/rt1060/board/: board.c  board.h  clock_config.c  clock_config.h  hardware_init.c  peripherals.c  peripherals.h
examples/platform/rt/rt1060/board/evkbmimxrt1060/: pin_mux.c  pin_mux.h
examples/platform/rt/rt1060/board/evkcmimxrt1060/: pin_mux.c  pin_mux.h  wifi_bt_config.c
examples/platform/rt/rt1170/: nxp_sdk_reconfig.cmake
examples/platform/rt/rt1170/app/ldscripts/: MIMXRT1176xxxxx_cm7_flexspi_nor.ld
examples/platform/rt/rt1170/app/project_include/freeRTOS/: FreeRTOSConfig.h
examples/platform/rt/rt1170/app/project_include/openthread/: OpenThreadConfig.h
examples/platform/rt/rt1170/board/: board.c  board.h  clock_config.c  clock_config.h  hardware_init.c  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h  sdmmc_config.c  sdmmc_config.h  wifi_bt_config.c  wifi_bt_config.h
examples/platform/rt/rw61x/: nxp_sdk_reconfig.cmake
examples/platform/rt/rw61x/app/ldscripts/: RW610_flash.ld
examples/platform/rt/rw61x/app/project_include/freeRTOS/: FreeRTOSConfig.h
examples/platform/rt/rw61x/app/project_include/openthread/: OpenThreadConfig.h  OpenThreadProjectLibConfig.h
examples/platform/rt/rw61x/board/: app_ethernet.h  hardware_init.c  monolithic_config.h  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
examples/platform/rt/rw61x/board/frdmrw612/: board.c  board.h  clock_config.c  clock_config.h
examples/platform/rt/rw61x/board/rdrw612bga/: board.c  board.h  clock_config.c  clock_config.h
github_sdk/common_sdk/manifest/: west.yml
github_sdk/k32w0/manifest/: west.yml
github_sdk/sdk_next/manifest/: west.yml
gn_build/: BUILD.gn  mcxw71_sdk  mcxw72_sdk  nxp_sdk.gni
gn_build/k32w0_sdk/: BUILD.gn  k32w0_sdk.gni  nxp_arm.gni  nxp_executable.gni
gn_build/k32w1_sdk/: BUILD.gn  core_sdk.gni  k32w1_sdk.gni  nxp_arm.gni
gn_build/mbedtls/: mbedtls.gni
gn_build/mbedtls/config/: nxp_matter_mbedtls_config.h
gn_build/mcxw71_k32w1_sdk/: BUILD.gn  core_sdk.gni  k32w1_executable.gni  mcxw71_k32w1_sdk.gni  middleware_sdk.gni  nxp_arm.gni  nxp_executable.gni
gn_build/mcxw7x_sdk/: BUILD.gn  core_sdk.gni  mcxw7x_sdk.gni  middleware_sdk.gni  nxp_arm.gni
gn_build/rt_sdk/: BUILD.gn  nxp_arm.gni  nxp_executable.gni  rt_executable.gni  rt_sdk.gni
gn_build/rt_sdk/bt_ble/: bt_ble.gni
gn_build/rt_sdk/lwip/: lwip.gni
gn_build/rt_sdk/lwip/common/: lwipopts_common.h  lwippools.h
gn_build/rt_sdk/lwip/ethernet/: lwipopts.h
gn_build/rt_sdk/lwip/openthread/: lwipopts.h
gn_build/rt_sdk/lwip/wifi/: lwipopts.h
gn_build/rt_sdk/lwip/wifi_openthread/: lwipopts.h
gn_build/rt_sdk/mbedtls/: mbedtls.gni
gn_build/rt_sdk/mbedtls/config/: matter_ksdk_mbedtls_config.h
gn_build/rt_sdk/rt1060/: BUILD.gn  rt1060.gni
gn_build/rt_sdk/rt1170/: BUILD.gn  rt1170.gni
gn_build/rt_sdk/rw61x/: BUILD.gn  rw61x.gni
gn_build/rt_sdk/sdk_hook/bt_pal/: EM_platform.h
gn_build/rt_sdk/sdk_hook/els_pkc/: ELSFactoryData.c  ELSFactoryData.h
gn_build/rt_sdk/sdk_hook/fatfs/config/: ffconf.h
gn_build/rt_sdk/sdk_hook/mbedtls/: ksdk_mbedtls_hook.c  ksdk_mbedtls_software.c
gn_build/rt_sdk/sdk_hook/zephyr/: kernel.c  kernel.h
gn_build/rt_sdk/sdk_hook/zephyr/bluetooth/: addr.h  bluetooth.h  conn.h  gatt.h  hci.h
gn_build/rt_sdk/sdk_hook/zephyr/random/: random.cpp  random.h
gn_build/rt_sdk/sdk_hook/zephyr/sys/: byteorder.h  slist.h  util.h
gn_build/rt_sdk/transceiver/: app_config.h  app_transceiver_config.h  edgefast_bluetooth_config.h  wifi_config.h
scripts/: update_nxp_sdk.py
scripts/setup/: bootstrap.bat  environment.json
